Added rating, why_us, order_form and works sections

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     <div class="main-header">
         <div class="main-header-header_block">
             <img class="main-header-header_block-logo" src="img/logo.png" alt="Logo">
-            <button class="main-header-header_block-button">
-                Order Now
-            </button>
+            <a href="#order_iframe">
+                <button class="main-header-header_block-button">
+                    Order Now
+                </button>
+            </a>
         </div>
         <div class="main-header-main_block">
             <div class="main-header-main_block-text">
@@ -65,6 +67,149 @@
                 <div id="orderformph-new-2"></div>
             </div>
         </div>
+    </div>
+    <div class="main-rating">
+        <div class="main-rating-rate">
+            <div class="main-rating-rate-row">
+                <div class="main-rating-rate-block">
+                    <img class="main-rating-rate-block-logo" src="img/sitejabber.png" alt="Logo">
+                    <div class="main-rating-rate-block-rating">
+                        <h3 class="main-rating-rate-block-rating-title">
+                            Sitejabber
+                        </h3>
+                        <img class="main-rating-rate-block-rating-rate" src="img/rating.svg" alt="Logo">
+                    </div>
+                </div>
+                <div class="main-rating-rate-block-rate_number">
+                    4.6
+                </div>
+            </div>
+            <div class="main-rating-rate-row">
+                <div class="main-rating-rate-block">
+                    <img class="main-rating-rate-block-logo" src="img/aeroscope.png" alt="Logo">
+                    <div class="main-rating-rate-block-rating">
+                        <h3 class="main-rating-rate-block-rating-title">
+                            AssignmentMavens
+                        </h3>
+                        <img class="main-rating-rate-block-rating-rate" src="img/rating.svg" alt="Logo">
+                    </div>
+                </div>
+                <div class="main-rating-rate-block-rate_number">
+                    4.7
+                </div>
+            </div>
+            <div class="main-rating-rate-row">
+                <div class="main-rating-rate-block">
+                    <img class="main-rating-rate-block-logo" src="img/trustpilot.png" alt="Logo">
+                    <div class="main-rating-rate-block-rating">
+                        <h3 class="main-rating-rate-block-rating-title">
+                            Trustpilot
+                        </h3>
+                        <img class="main-rating-rate-block-rating-rate" src="img/rating.svg" alt="Logo">
+                    </div>
+                </div>
+                <div class="main-rating-rate-block-rate_number">
+                    4.5
+                </div>
+            </div>
+        </div>
+        <div class="main-rating-comment">
+            <p class="main-rating-comment-text">
+                Our professional writers are working hard to provide higher-quality essay assistance.
+            </p>
+        </div>
+    </div>
+    <img class="main-left_circle" src="img/left_circle.png" alt="Circle">
+    <div class="main-why_us">
+        <h2 class="main-why_us-title">
+            Why us?
+        </h2>
+        <hr class="main-why_us-underline">
+        <ul class="main-why_us-list">
+            <li class="main-why_us-list-item">
+                <img class="main-why_us-list-item-icon" src="img/change.png" alt="Change">
+                You can start direct communication with the writer online 24/7.
+            </li>
+            <li class="main-why_us-list-item">
+                <img class="main-why_us-list-item-icon" src="img/academic.png" alt="Academic">
+                You will get The best academic writers.
+            </li>
+            <li class="main-why_us-list-item">
+                <img class="main-why_us-list-item-icon" src="img/timeline.png" alt="Timeline">
+                We are occure the type of paper you need, citation style and the
+                deadline for the given project.
+            </li>
+            <li class="main-why_us-list-item">
+                <img class="main-why_us-list-item-icon" src="img/artboard.png" alt="Artboard">
+                You can ask for a revision if you feel the paper doesn’t meet your
+                writing instructions.
+            </li>
+        </ul>
+    </div>
+    <img class="main-right_circle" src="img/right_circle.png" alt="Circle">
+    <div class="main-order_form">
+        <h2 class="main-order_form-title">
+            Best Essay Writers⠀⠀⠀24/7 Customer Support
+        </h2>
+        <hr class="main-why_us-underline">
+        <a class="main-order_form-href" href="#order_iframe">
+            <button class="main-order_form-button">
+                Order Now
+            </button>
+        </a>
+        <iframe class="order_iframe" id="order_iframe"
+                src="//www.paperhelp.org/order.html?pid=18808&amp;sub_id=6&amp;ubanner_off=0&amp;empty=1&amp;o_site=&amp;new_design_of=3&amp;partner_site=creative"
+                style="width: 90%; height: 993px; border: 0; visibility: visible;" scrolling="no">
+        </iframe>
+    </div>
+    <div class="main-work">
+        <img class="main-left_circle main-left_second_circle" src="img/left_circle.png" alt="Circle">
+        <h2 class="main-why_us-title">
+            How Our Essay Service Works?
+        </h2>
+        <hr class="main-why_us-underline">
+        <div class="main-work-steps">
+            <div class="main-work-steps-step">
+                <div class="main-work-steps-step-number_block">
+                    <h3 class="main-work-steps-step-number_block-number">
+                        01
+                    </h3>
+                    <p class="main-work-steps-step-number_block-text">
+                        Step
+                    </p>
+                </div>
+                <p class="main-work-steps-step-description">
+                    Fill out the order form
+                </p>
+            </div>
+            <div class="main-work-steps-step">
+                <div class="main-work-steps-step-number_block">
+                    <h3 class="main-work-steps-step-number_block-number">
+                        02
+                    </h3>
+                    <p class="main-work-steps-step-number_block-text">
+                        Step
+                    </p>
+                </div>
+                <p class="main-work-steps-step-description">
+                    Place the Order
+                </p>
+            </div>
+            <div class="main-work-steps-step">
+                <div class="main-work-steps-step-number_block">
+                    <h3 class="main-work-steps-step-number_block-number">
+                        03
+                    </h3>
+                    <p class="main-work-steps-step-number_block-text">
+                        Step
+                    </p>
+                </div>
+                <p class="main-work-steps-step-description">
+                    Once the order has been completed we will sent directly to your email address
+                </p>
+            </div>
+        </div>
+        <img class="main-right_circle main-right_second_circle" src="img/right_circle.png" alt="Circle">
     </div>
 </div>
 </body>
