Added review block

--- a/index.html
+++ b/index.html
@@ -211,6 +211,77 @@
         </div>
         <img class="main-right_circle main-right_second_circle" src="img/right_circle.png" alt="Circle">
     </div>
+    <div class="main-feedback">
+        <h2 class="main-why_us-title">
+            Feedbacks about Our Paper Writers
+        </h2>
+        <hr class="main-why_us-underline">
+        <div class="main-feedback-review_block">
+            <div class="main-feedback-review_block-item">
+                <div class="main-feedback-review_block-item-comment_block">
+                    <p class="main-feedback-review_block-item-comment">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        It type specimen book.
+                    </p>
+                    <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
+                </div>
+                <div class="main-feedback-review_block-item-user_block">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <div class="main-feedback-review_block-item-user_block-info">
+                        <h3 class="main-feedback-review_block-item-user_block-info-name">
+                            James Barnes
+                        </h3>
+                        <p class="main-feedback-review_block-item-user_block-info-position">
+                            Masters, Purdue University
+                        </p>
+                    </div>
+                    <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
+                </div>
+            </div>
+            <div class="main-feedback-review_block-item">
+                <div class="main-feedback-review_block-item-comment_block">
+                    <p class="main-feedback-review_block-item-comment">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        It type specimen book.
+                    </p>
+                    <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
+                </div>
+                <div class="main-feedback-review_block-item-user_block">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <div class="main-feedback-review_block-item-user_block-info">
+                        <h3 class="main-feedback-review_block-item-user_block-info-name">
+                            James Barnes
+                        </h3>
+                        <p class="main-feedback-review_block-item-user_block-info-position">
+                            Masters, Purdue University
+                        </p>
+                    </div>
+                    <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
+                </div>
+            </div>
+            <div class="main-feedback-review_block-item">
+                <div class="main-feedback-review_block-item-comment_block">
+                    <p class="main-feedback-review_block-item-comment">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        It type specimen book.
+                    </p>
+                    <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
+                </div>
+                <div class="main-feedback-review_block-item-user_block">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <div class="main-feedback-review_block-item-user_block-info">
+                        <h3 class="main-feedback-review_block-item-user_block-info-name">
+                            James Barnes
+                        </h3>
+                        <p class="main-feedback-review_block-item-user_block-info-position">
+                            Masters, Purdue University
+                        </p>
+                    </div>
+                    <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
