Finished review block && added footer

--- a/index.html
+++ b/index.html
@@ -220,19 +220,20 @@
             <div class="main-feedback-review_block-item">
                 <div class="main-feedback-review_block-item-comment_block">
                     <p class="main-feedback-review_block-item-comment">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        It type specimen book.
+                        ”Glad to be a part of our company and a true professional in essay writing, paper editing and
+                        creating interesting and burning topics on order we get from our clients. Thanks to our clients,
+                        we deal with burning orders, specific and rare topics, and I am sure were doing well and move
+                        towards a successful outcome.”
                     </p>
                     <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
                 </div>
                 <div class="main-feedback-review_block-item-user_block">
-                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/lisa.png" alt="Lisa profile">
                     <div class="main-feedback-review_block-item-user_block-info">
                         <h3 class="main-feedback-review_block-item-user_block-info-name">
-                            James Barnes
+                            Lisa Haesen
                         </h3>
                         <p class="main-feedback-review_block-item-user_block-info-position">
-                            Masters, Purdue University
                         </p>
                     </div>
                     <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
@@ -241,19 +242,19 @@
             <div class="main-feedback-review_block-item">
                 <div class="main-feedback-review_block-item-comment_block">
                     <p class="main-feedback-review_block-item-comment">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        It type specimen book.
+                        ”Being a professional writer made me a creative thinker and a reliable friend in professional
+                        academic writing. BuyEssayFriend faces different issues every day and I and the whole team
+                        develop stress tolerance as a key professional quality necessary for successful cooperation.”
                     </p>
                     <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
                 </div>
                 <div class="main-feedback-review_block-item-user_block">
-                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/michelle.png" alt="Michelle profile">
                     <div class="main-feedback-review_block-item-user_block-info">
                         <h3 class="main-feedback-review_block-item-user_block-info-name">
-                            James Barnes
+                            Michelle Boyer
                         </h3>
                         <p class="main-feedback-review_block-item-user_block-info-position">
-                            Masters, Purdue University
                         </p>
                     </div>
                     <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
@@ -262,24 +263,44 @@
             <div class="main-feedback-review_block-item">
                 <div class="main-feedback-review_block-item-comment_block">
                     <p class="main-feedback-review_block-item-comment">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        It type specimen book.
+                        “Our Quality Department carefully assesses writers’ knowledge before they begin writing on this
+                        or that particular subject. Practically all writers major in at least in 3-5 disciplines.
+                        However, we also have more narrowly-focused specialists. Many of them gradually enter adjacent
+                        disciplines, which helps broaden their expertise in 6-8 or more subjects.”
                     </p>
                     <img class="main-feedback-review_block-item-quote" src="img/quote.png" alt="Quote">
                 </div>
                 <div class="main-feedback-review_block-item-user_block">
-                    <img class="main-feedback-review_block-item-user_block-profile" src="img/profile.png" alt="Profile">
+                    <img class="main-feedback-review_block-item-user_block-profile" src="img/eric.png" alt="Eric profile">
                     <div class="main-feedback-review_block-item-user_block-info">
                         <h3 class="main-feedback-review_block-item-user_block-info-name">
-                            James Barnes
+                            Eric Ward
                         </h3>
                         <p class="main-feedback-review_block-item-user_block-info-position">
-                            Masters, Purdue University
                         </p>
                     </div>
                     <img class="main-feedback-review_block-item-user_block-rating" src="img/rating.svg" alt="Rating">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="main-footer">
+        <p class="main-footer-copyright">
+            Copyright 2020 - All Right Reserved
+        </p>
+        <ul class="main-footer-navbar">
+            <li class="main-footer-navbar-item">Policy</li>
+            <li class="main-footer-navbar-item">Terms & Conditions</li>
+            <li class="main-footer-navbar-item">Help</li>
+            <li class="main-footer-navbar-item">FAQs</li>
+        </ul>
+    </div>
+    <div class="main-payments">
+        <img class="main-payments-method" src="img/visa.svg" alt="Visa">
+        <img class="main-payments-method" src="img/mastercard.svg" alt="Mastercard">
+        <img class="main-payments-method" src="img/american-express.svg" alt="American Express">
+        <div class="main-payments-dmca">
+            <img src="img/dmca_logo.png" alt="DMCA">
         </div>
     </div>
 </div>
