Added adaptive layouts

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <img class="main-right_circle" src="img/right_circle.png" alt="Circle">
     <div class="main-order_form">
         <h2 class="main-order_form-title">
-            Best Essay Writers⠀⠀⠀24/7 Customer Support
+            Best Essay Writers 24/7 Customer Support
         </h2>
         <hr class="main-why_us-underline">
         <a class="main-order_form-href" href="#order_iframe">
